--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>GreenSculpt</title>
 </head>
 <body>
-    <section>
-        <div>
-            <nav>
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#services">Services</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
+        <section class="flex justify-end">
+            <div>
+                <nav class="bg-gray-800 p-4">
+                    <a href="#home" class="text-white">Home</a>
+                    <a href="#about" class="text-white">About</a>
+                    <a href="#services" class="text-white">Services</a>
+                    <a href="#contact" class="text-white">Contact</a>
+                </nav>
+            </div>
+        </section>
     </section>
 </body>
 </html>
