--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <title>GreenSculpt</title>
 </head>
 <body>
-        <section class="flex justify-end">
-            <div>
-                <nav class="bg-gray-800 p-4">
-                    <a href="#home" class="text-white">Home</a>
-                    <a href="#about" class="text-white">About</a>
-                    <a href="#services" class="text-white">Services</a>
-                    <a href="#contact" class="text-white">Contact</a>
-                </nav>
-            </div>
-        </section>
+    <section class="flex justify-end">
+        <div>
+            <nav class="bg-gray-800 p-4">
+                <a href="#" class="text-white">Home</a>
+                <a href="#" class="text-white">About Us</a>
+                <a href="#" class="text-white">Blog</a>
+                <a href="#" class="text-white">Contact Us</a>
+                <a href="#" class="text-white">Sign Up/Log In</a>
+            </nav>
+        </div>
     </section>
 </body>
 </html>
