create tailwind config and add the website color theme and font

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>GreenSculpt</title>
 </head>
 <body>
+    <style>
+        /** @type {import('tailwindcss').Config} */
+        module.exports = {
+            theme: {
+                colors: {
+                    transparent: 'transparent',
+                    current: 'currentColor',
+                    'GSwhite': '#F2F2F2',
+                    'GSblack': '#3A3A3A',
+                    'GSgreen': '#AEC281',
+                    'GSbg': '#8BCA00',
+                    'GSlightgreen': '#D2FE71',
+                }
+            }
+        }
+    </style>
     <section class="flex justify-end">
         <div>
             <nav class="bg-gray-800 p-4">
